--- a/df_to_gml.ipynb
+++ b/df_to_gml.ipynb
@@ -137,6 +137,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convert csv file to gml graph and clean the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 227,
    "metadata": {},
@@ -284,93 +291,6 @@
     "import networkx as nx\n",
     "g = nx.read_gml(\"flightlist_20191201_20191231.gml\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 251,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'icao': 'VIAG',\n",
-       " 'iata': 'AGR',\n",
-       " 'name': 'Agra Airport',\n",
-       " 'city': '',\n",
-       " 'subd': 'Uttar-Pradesh',\n",
-       " 'country': 'IN',\n",
-       " 'elevation': 551.0,\n",
-       " 'lat': 27.1557998657,\n",
-       " 'lon': 77.960899353,\n",
-       " 'tz': 'Asia/Kolkata',\n",
-       " 'lid': ''}"
-      ]
-     },
-     "execution_count": 251,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "airports['VIAG']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 252,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.19371069182389938"
-      ]
-     },
-     "execution_count": 252,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "308/1590"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 257,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'icao': 'OMDW',\n",
-       " 'iata': 'DWC',\n",
-       " 'name': 'Al Maktoum International Airport',\n",
-       " 'city': 'Jebel Ali',\n",
-       " 'subd': 'Dubai',\n",
-       " 'country': 'AE',\n",
-       " 'elevation': 114.0,\n",
-       " 'lat': 24.8966666667,\n",
-       " 'lon': 55.1613888889,\n",
-       " 'tz': 'Asia/Dubai',\n",
-       " 'lid': ''}"
-      ]
-     },
-     "execution_count": 257,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "airports['OMDW']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
